Latest update section Added

--- a/index.html
+++ b/index.html
@@ -158,6 +158,49 @@
         </button>
       </div>
     </section>
+
+    <div class="container-fluid bg-primary-subtle py-2">
+      <div class="d-flex align-items-center overflow-hidden">
+        <!-- Fixed heading -->
+        <div class="bg-primary text-white fw-bold px-3 py-2 me-3 text-nowrap">
+          LATEST UPDATE
+        </div>
+
+        <!-- Ticker -->
+        <div class="flex-grow-1 overflow-hidden">
+          <div class="ticker-track d-flex">
+            <div class="ticker-item me-5">
+              <a href="#" class="text-decoration-none fw-semibold l-item">
+                <span class="badge bg-danger">NEW</span>
+                <i class="bi bi-megaphone-fill text-warning"></i>
+                MBA/MBA-BA 2026-28 Admissions Policy
+              </a>
+            </div>
+            <div class="ticker-item me-5">
+              <a href="#" class="fw-semibold text-decoration-none l-item">
+                List of selected candidates
+              </a>
+            </div>
+
+            <!-- DUPLICATE (for seamless loop) -->
+            <div class="ticker-item me-5">
+              <a href="#" class="fw-semibold text-decoration-none l-item">
+                MBA/MBA-BA 2026-28 Admissions Policy
+              </a>
+            </div>
+            <div class="ticker-item me-5">
+              <a href="#" class="fw-semibold text-decoration-none l-item">
+                <span class="badge bg-danger">NEW</span>
+                <i class="bi bi-megaphone-fill text-warning"></i>
+                List of selected candidates
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--About Section -->
     <section id="about" class="section-padding">
       <div class="container">
         <div class="text-center mb-5">
@@ -214,11 +257,7 @@
           <div class="col-lg-4">
             <div class="leadership-card">
               <div class="leader-img-wrapper">
-                <img
-                  src=""
-                  alt="Chancellor"
-                  class="leader-img"
-                />
+                <img src="" alt="Chancellor" class="leader-img" />
               </div>
               <div class="leader-content">
                 <h4 class="leader-name">Dr. Rajesh Kumar</h4>
@@ -236,11 +275,7 @@
           <div class="col-lg-4">
             <div class="leadership-card">
               <div class="leader-img-wrapper">
-                <img
-                  src=""
-                  alt="Vice Chancellor"
-                  class="leader-img"
-                />
+                <img src="" alt="Vice Chancellor" class="leader-img" />
               </div>
               <div class="leader-content">
                 <h4 class="leader-name">Prof. Anjali Sharma</h4>
@@ -258,11 +293,7 @@
           <div class="col-lg-4">
             <div class="leadership-card">
               <div class="leader-img-wrapper">
-                <img
-                  src=""
-                  alt="Registrar"
-                  class="leader-img"
-                />
+                <img src="" alt="Registrar" class="leader-img" />
               </div>
               <div class="leader-content">
                 <h4 class="leader-name">Dr. Suresh Patel</h4>
@@ -474,11 +505,7 @@
       <div class="container">
         <!-- University Info -->
         <div class="footer-logo-section">
-          <img
-            src="images/gvit.png"
-            alt="GVIT Logo"
-            class="footer-logo"
-          />
+          <img src="images/gvit.png" alt="GVIT Logo" class="footer-logo" />
           <h3 class="footer-university-name">GVIT</h3>
           <p class="footer-address">
             GVIT, Jyoti Vihar, Burla,<br />
