Add new blinking badge

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           <div class="ticker-track d-flex">
             <div class="ticker-item me-5">
               <a href="#" class="text-decoration-none fw-semibold l-item">
-                <span class="badge bg-danger">NEW</span>
+                <span class="badge bg-danger blink-new">NEW</span>
                 <i class="bi bi-megaphone-fill text-warning"></i>
                 MBA/MBA-BA 2026-28 Admissions Policy
               </a>
