Add new event and announcement section

--- a/index.html
+++ b/index.html
@@ -199,7 +199,130 @@
         </div>
       </div>
     </div>
+    <!-- Announcement Section-->
+     <section class="container my-5">
+      <div class="row g-4">
+        <!-- News & Events -->
+        <div class="col-md-6">
+          <div class="news-box">
+            <h4 class="box-title">News and Events</h4>
 
+            <div class="news-scroll marquee">
+              <div class="marquee-list">
+                <div class="news-card">
+                  <p class="news-date">
+                    Published on: Thursday 20th November 2025
+                  </p>
+                  <p class="news-text">
+                    List of selected candidates for Exe-PhD & DBA Programme for
+                    the batch 2025–28
+                  </p>
+                </div>
+
+                <div class="news-card">
+                  <p class="news-date">Published on: Sunday 27th July 2025</p>
+                  <p class="news-text">
+                    BS (Data Science and AI) program: First merit list announced
+                  </p>
+                </div>
+                <div class="news-card">
+                  <p class="news-date">Published on: Sunday 27th July 2025</p>
+                  <p class="news-text">
+                    BS (Data Science and AI) program: First merit list announced
+                  </p>
+                </div>
+                <div class="news-card">
+                  <p class="news-date">Published on: Sunday 27th July 2025</p>
+                  <p class="news-text">
+                    BS (Data Science and AI) program: First merit list announced
+                  </p>
+                </div>
+                <div class="news-card">
+                  <p class="news-date">Published on: Sunday 27th July 2025</p>
+                  <p class="news-text">
+                    BS (Data Science and AI) program: First merit list announced
+                  </p>
+                </div>
+
+                <div class="news-card">
+                  <p class="news-date">Published on: Saturday 21st June 2025</p>
+                  <p class="news-text">
+                    Provisional List of Candidates Selected for Admission to the
+                    PhD Programme – Batch 2025
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Announcements -->
+        <div class="col-md-6">
+          <div class="news-box">
+            <h4 class="box-title">Announcements</h4>
+
+            <div class="news-scroll marquee">
+              <div class="marquee-list">
+                <div class="news-card">
+                  <p class="news-date">
+                    Published on: Thursday 20th November 2025
+                  </p>
+                  <p class="news-text">
+                    List of selected candidates for Exe-PhD & DBA Programme for
+                    the batch 2025–28
+                  </p>
+                </div>
+
+                <div class="news-card">
+                  <p class="news-date">Published on: Sunday 27th July 2025</p>
+                  <p class="news-text">
+                    BS (Data Science and AI) program: First merit list announced
+                  </p>
+                </div>
+                <div class="news-card">
+                  <p class="news-date">Published on: Sunday 27th July 2025</p>
+                  <p class="news-text">
+                    BS (Data Science and AI) program: First merit list announced
+                  </p>
+                </div>
+<div class="news-card">
+                  <p class="news-date">Published on: Sunday 27th July 2025</p>
+                  <p class="news-text">
+                    BS (Data Science and AI) program: First merit list announced
+                  </p>
+                </div>
+<div class="news-card">
+                  <p class="news-date">Published on: Sunday 27th July 2025</p>
+                  <p class="news-text">
+                    BS (Data Science and AI) program: First merit list announced
+                  </p>
+                </div>
+<div class="news-card">
+                  <p class="news-date">Published on: Sunday 27th July 2025</p>
+                  <p class="news-text">
+                    BS (Data Science and AI) program: First merit list announced
+                  </p>
+                </div>
+<div class="news-card">
+                  <p class="news-date">Published on: Sunday 27th July 2025</p>
+                  <p class="news-text">
+                    BS (Data Science and AI) program: First merit list announced
+                  </p>
+                </div>
+
+                <div class="news-card">
+                  <p class="news-date">Published on: Saturday 21st June 2025</p>
+                  <p class="news-text">
+                    Provisional List of Candidates Selected for Admission to the
+                    PhD Programme – Batch 2025
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!--About Section -->
     <section id="about" class="section-padding">
       <div class="container">
