Converted the events and announcement list into links

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       </div>
     </div>
     <!-- Announcement Section-->
-     <section class="container my-5">
+    <section class="container my-5">
       <div class="row g-4">
         <!-- News & Events -->
         <div class="col-md-6">
@@ -209,48 +209,69 @@
 
             <div class="news-scroll marquee">
               <div class="marquee-list">
-                <div class="news-card">
-                  <p class="news-date">
-                    Published on: Thursday 20th November 2025
-                  </p>
-                  <p class="news-text">
-                    List of selected candidates for Exe-PhD & DBA Programme for
-                    the batch 2025–28
-                  </p>
-                </div>
+                <a href="news-1.html" class="news-link">
+                  <div class="news-card">
+                    <p class="news-date">
+                      Published on: Thursday 20th November 2025
+                    </p>
+                    <p class="news-text">
+                      List of selected candidates for Exe-PhD & DBA Programme
+                      for the batch 2025–28
+                    </p>
+                  </div>
+                </a>
 
-                <div class="news-card">
-                  <p class="news-date">Published on: Sunday 27th July 2025</p>
-                  <p class="news-text">
-                    BS (Data Science and AI) program: First merit list announced
-                  </p>
-                </div>
-                <div class="news-card">
-                  <p class="news-date">Published on: Sunday 27th July 2025</p>
-                  <p class="news-text">
-                    BS (Data Science and AI) program: First merit list announced
-                  </p>
-                </div>
-                <div class="news-card">
-                  <p class="news-date">Published on: Sunday 27th July 2025</p>
-                  <p class="news-text">
-                    BS (Data Science and AI) program: First merit list announced
-                  </p>
-                </div>
-                <div class="news-card">
-                  <p class="news-date">Published on: Sunday 27th July 2025</p>
-                  <p class="news-text">
-                    BS (Data Science and AI) program: First merit list announced
-                  </p>
-                </div>
+                <a href="news-2.html" class="news-link">
+                  <div class="news-card">
+                    <p class="news-date">Published on: Sunday 27th July 2025</p>
+                    <p class="news-text">
+                      BS (Data Science and AI) program: First merit list
+                      announced
+                    </p>
+                  </div>
+                </a>
 
-                <div class="news-card">
-                  <p class="news-date">Published on: Saturday 21st June 2025</p>
-                  <p class="news-text">
-                    Provisional List of Candidates Selected for Admission to the
-                    PhD Programme – Batch 2025
-                  </p>
-                </div>
+                <a href="news-3.html" class="news-link">
+                  <div class="news-card">
+                    <p class="news-date">Published on: Sunday 27th July 2025</p>
+                    <p class="news-text">
+                      BS (Data Science and AI) program: First merit list
+                      announced
+                    </p>
+                  </div>
+                </a>
+
+                <a href="news-4.html" class="news-link">
+                  <div class="news-card">
+                    <p class="news-date">Published on: Sunday 27th July 2025</p>
+                    <p class="news-text">
+                      BS (Data Science and AI) program: First merit list
+                      announced
+                    </p>
+                  </div>
+                </a>
+
+                <a href="news-5.html" class="news-link">
+                  <div class="news-card">
+                    <p class="news-date">Published on: Sunday 27th July 2025</p>
+                    <p class="news-text">
+                      BS (Data Science and AI) program: First merit list
+                      announced
+                    </p>
+                  </div>
+                </a>
+
+                <a href="news-6.html" class="news-link">
+                  <div class="news-card">
+                    <p class="news-date">
+                      Published on: Saturday 21st June 2025
+                    </p>
+                    <p class="news-text">
+                      Provisional List of Candidates Selected for Admission to
+                      the PhD Programme – Batch 2025
+                    </p>
+                  </div>
+                </a>
               </div>
             </div>
           </div>
@@ -263,60 +284,69 @@
 
             <div class="news-scroll marquee">
               <div class="marquee-list">
-                <div class="news-card">
-                  <p class="news-date">
-                    Published on: Thursday 20th November 2025
-                  </p>
-                  <p class="news-text">
-                    List of selected candidates for Exe-PhD & DBA Programme for
-                    the batch 2025–28
-                  </p>
-                </div>
+                <a href="announcement-1.html" class="news-link">
+                  <div class="news-card">
+                    <p class="news-date">
+                      Published on: Thursday 20th November 2025
+                    </p>
+                    <p class="news-text">
+                      List of selected candidates for Exe-PhD & DBA Programme
+                      for the batch 2025–28
+                    </p>
+                  </div>
+                </a>
 
-                <div class="news-card">
-                  <p class="news-date">Published on: Sunday 27th July 2025</p>
-                  <p class="news-text">
-                    BS (Data Science and AI) program: First merit list announced
-                  </p>
-                </div>
-                <div class="news-card">
-                  <p class="news-date">Published on: Sunday 27th July 2025</p>
-                  <p class="news-text">
-                    BS (Data Science and AI) program: First merit list announced
-                  </p>
-                </div>
-<div class="news-card">
-                  <p class="news-date">Published on: Sunday 27th July 2025</p>
-                  <p class="news-text">
-                    BS (Data Science and AI) program: First merit list announced
-                  </p>
-                </div>
-<div class="news-card">
-                  <p class="news-date">Published on: Sunday 27th July 2025</p>
-                  <p class="news-text">
-                    BS (Data Science and AI) program: First merit list announced
-                  </p>
-                </div>
-<div class="news-card">
-                  <p class="news-date">Published on: Sunday 27th July 2025</p>
-                  <p class="news-text">
-                    BS (Data Science and AI) program: First merit list announced
-                  </p>
-                </div>
-<div class="news-card">
-                  <p class="news-date">Published on: Sunday 27th July 2025</p>
-                  <p class="news-text">
-                    BS (Data Science and AI) program: First merit list announced
-                  </p>
-                </div>
+                <a href="announcement-2.html" class="news-link">
+                  <div class="news-card">
+                    <p class="news-date">Published on: Sunday 27th July 2025</p>
+                    <p class="news-text">
+                      BS (Data Science and AI) program: First merit list
+                      announced
+                    </p>
+                  </div>
+                </a>
 
-                <div class="news-card">
-                  <p class="news-date">Published on: Saturday 21st June 2025</p>
-                  <p class="news-text">
-                    Provisional List of Candidates Selected for Admission to the
-                    PhD Programme – Batch 2025
-                  </p>
-                </div>
+                <a href="announcement-3.html" class="news-link">
+                  <div class="news-card">
+                    <p class="news-date">Published on: Sunday 27th July 2025</p>
+                    <p class="news-text">
+                      BS (Data Science and AI) program: First merit list
+                      announced
+                    </p>
+                  </div>
+                </a>
+
+                <a href="announcement-4.html" class="news-link">
+                  <div class="news-card">
+                    <p class="news-date">Published on: Sunday 27th July 2025</p>
+                    <p class="news-text">
+                      BS (Data Science and AI) program: First merit list
+                      announced
+                    </p>
+                  </div>
+                </a>
+
+                <a href="announcement-5.html" class="news-link">
+                  <div class="news-card">
+                    <p class="news-date">Published on: Sunday 27th July 2025</p>
+                    <p class="news-text">
+                      BS (Data Science and AI) program: First merit list
+                      announced
+                    </p>
+                  </div>
+                </a>
+
+                <a href="announcement-6.html" class="news-link">
+                  <div class="news-card">
+                    <p class="news-date">
+                      Published on: Saturday 21st June 2025
+                    </p>
+                    <p class="news-text">
+                      Provisional List of Candidates Selected for Admission to
+                      the PhD Programme – Batch 2025
+                    </p>
+                  </div>
+                </a>
               </div>
             </div>
           </div>
