Added a new sectio called life in the campus

--- a/index.html
+++ b/index.html
@@ -654,6 +654,57 @@
         </div>
       </div>
     </section>
+
+    <!--Campus section-->
+    <section class="container-fluid py-5 text-center" id="campus">
+  <h2 class="section-title mb-4 mb-5">Life at University</h2>
+
+  <div class="container">
+    <div class="row g-4">
+      
+      <div class="col-md-3 col-sm-6">
+  <div class="life-card">
+    <img src="images/campus.jpg" alt="Campus Life">
+    <div class="life-overlay">
+      <h5>Campus Life</h5>
+      <p>A vibrant and inclusive campus environment.</p>
+    </div>
+  </div>
+</div>
+<div class="col-md-3 col-sm-6">
+  <div class="life-card">
+    <img src="images/campus.jpg" alt="Campus Life">
+    <div class="life-overlay">
+      <h5>Campus Life</h5>
+      <p>A vibrant and inclusive campus environment.</p>
+    </div>
+  </div>
+</div>
+<div class="col-md-3 col-sm-6">
+  <div class="life-card">
+    <img src="images/campus.jpg" alt="Campus Life">
+    <div class="life-overlay">
+      <h5>Campus Life</h5>
+      <p>A vibrant and inclusive campus environment.</p>
+    </div>
+  </div>
+</div>
+<div class="col-md-3 col-sm-6">
+  <div class="life-card">
+    <img src="images/campus.jpg" alt="Campus Life">
+    <div class="life-overlay">
+      <h5>Campus Life</h5>
+      <p>A vibrant and inclusive campus environment.</p>
+    </div>
+  </div>
+</div>
+
+    </div>
+  </div>
+</section>
+
+    </section>
+    <!--Footer Section-->
     <footer class="footer-section">
       <div class="container">
         <!-- University Info -->
