--- a/index.html
+++ b/index.html
@@ -25,92 +25,140 @@
         />
       </div>
     </section>
-    <section class="bg-warning d-flex align-items-center">
-      <nav class="navbar navbar-expand-lg navbar-custom">
-        <div class="container-fluid">
-          <ul class="navbar-nav mx-auto align-items-center">
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <i class="fas fa-house"></i>
-              </a>
-            </li>
+   <section class="bg-warning d-flex align-items-center">
+  <nav class="navbar navbar-expand-lg navbar-custom">
+    <div class="container-fluid">
+      <ul class="navbar-nav mx-auto align-items-center">
 
-            <li class="nav-item">
-              <a class="nav-link" href="#about">About us</a>
-            </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">
+            <i class="fas fa-house"></i>
+          </a>
+        </li>
 
-            <!-- Academics -->
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                data-bs-toggle="dropdown"
-              >
-                Academics
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Courses</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="#about">About us</a>
+        </li>
 
-                <li><a class="dropdown-item" href="#">Departments</a></li>
-              </ul>
-            </li>
-
-            <!-- Admission -->
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                data-bs-toggle="dropdown"
-              >
-                Admission
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">UG</a></li>
-                <li><a class="dropdown-item" href="#">PG</a></li>
-              </ul>
-            </li>
-
-            <!-- Facility -->
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                data-bs-toggle="dropdown"
-              >
-                Facility
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Library</a></li>
-                <li><a class="dropdown-item" href="#">Hostel</a></li>
-              </ul>
-            </li>
-
-            <!-- Colleges -->
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                data-bs-toggle="dropdown"
-              >
-                Colleges
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Engineering</a></li>
-                <li><a class="dropdown-item" href="#">Science</a></li>
-              </ul>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="#research">Research</a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="#cell">Cell/Misc</a>
-            </li>
+        <!-- Academics -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
+            Academics
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Courses</a></li>
+            <li><a class="dropdown-item" href="#">Departments</a></li>
+            <!-- added -->
+            <li><a class="dropdown-item" href="#">Academic Calendar</a></li>
+            <li><a class="dropdown-item" href="#">Syllabus</a></li>
           </ul>
-        </div>
-      </nav>
-    </section>
+        </li>
+
+        <!-- Admission -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
+            Admission
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">UG</a></li>
+            <li><a class="dropdown-item" href="#">PG</a></li>
+            <!-- added -->
+            <li><a class="dropdown-item" href="#">PhD</a></li>
+            <li><a class="dropdown-item" href="#">Admission Notice</a></li>
+          </ul>
+        </li>
+
+        <!-- Facility -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
+            Facility
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Library</a></li>
+            <li><a class="dropdown-item" href="#">Hostel</a></li>
+            <!-- added -->
+            <li><a class="dropdown-item" href="#">Laboratories</a></li>
+            <li><a class="dropdown-item" href="#">Sports</a></li>
+          </ul>
+        </li>
+
+        <!-- Colleges -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
+            Colleges
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Engineering</a></li>
+            <li><a class="dropdown-item" href="#">Science</a></li>
+            <li><a class="dropdown-item" href="#">Arts</a></li>
+            <li><a class="dropdown-item" href="#">Commerece</a></li>
+            <li><a class="dropdown-item" href="#">Nursing</a></li>
+            <!-- added -->
+            <li><a class="dropdown-item" href="#">Law</a></li>
+            <li><a class="dropdown-item" href="#">Management</a></li>
+          </ul>
+        </li>
+
+        <!-- Students -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
+            Students
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Student Login</a></li>
+            <li><a class="dropdown-item" href="#">LMS</a></li>
+            <li><a class="dropdown-item" href="#">Examination</a></li>
+            <li><a class="dropdown-item" href="#">Results</a></li>
+            <!-- added -->
+            <li><a class="dropdown-item" href="#">Scholarships</a></li>
+            <li><a class="dropdown-item" href="#">Notices</a></li>
+          </ul>
+        </li>
+
+        <!-- Placements -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
+            Placements
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Placement Cell</a></li>
+            <li><a class="dropdown-item" href="#">Recruiters</a></li>
+            <li><a class="dropdown-item" href="#">Training & Internship</a></li>
+            <li><a class="dropdown-item" href="#">Placement Statistics</a></li>
+            <!-- added -->
+            <li><a class="dropdown-item" href="#">Career Guidance</a></li>
+          </ul>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#research">Research</a>
+        </li>
+
+        <!-- added -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
+            Accreditation
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">IQAC</a></li>
+            <li><a class="dropdown-item" href="#">NAAC</a></li>
+            <li><a class="dropdown-item" href="#">NIRF</a></li>
+          </ul>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#cell">Cell/Misc</a>
+        </li>
+
+        <!-- added -->
+        <li class="nav-item">
+          <a class="nav-link" href="#contact">Contact</a>
+        </li>
+
+      </ul>
+    </div>
+  </nav>
+</section>
 
     <section class="hero" id="home">
       <div id="heroCarousel" class="carousel slide">
