--- a/index.html
+++ b/index.html
@@ -28,137 +28,148 @@
    <section class="bg-warning d-flex align-items-center">
   <nav class="navbar navbar-expand-lg navbar-custom">
     <div class="container-fluid">
-      <ul class="navbar-nav mx-auto align-items-center">
 
-        <li class="nav-item">
-          <a class="nav-link" href="#">
-            <i class="fas fa-house"></i>
-          </a>
-        </li>
+      <!-- TOGGLER -->
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#mainNavbar"
+        aria-controls="mainNavbar"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <li class="nav-item">
-          <a class="nav-link" href="#about">About us</a>
-        </li>
+      <!-- COLLAPSIBLE MENU -->
+      <div class="collapse navbar-collapse" id="mainNavbar">
+        <ul class="navbar-nav mx-auto align-items-center">
 
-        <!-- Academics -->
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
-            Academics
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Courses</a></li>
-            <li><a class="dropdown-item" href="#">Departments</a></li>
-            <!-- added -->
-            <li><a class="dropdown-item" href="#">Academic Calendar</a></li>
-            <li><a class="dropdown-item" href="#">Syllabus</a></li>
-          </ul>
-        </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              <i class="fas fa-house"></i>
+            </a>
+          </li>
 
-        <!-- Admission -->
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
-            Admission
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">UG</a></li>
-            <li><a class="dropdown-item" href="#">PG</a></li>
-            <!-- added -->
-            <li><a class="dropdown-item" href="#">PhD</a></li>
-            <li><a class="dropdown-item" href="#">Admission Notice</a></li>
-          </ul>
-        </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About us</a>
+          </li>
 
-        <!-- Facility -->
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
-            Facility
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Library</a></li>
-            <li><a class="dropdown-item" href="#">Hostel</a></li>
-            <!-- added -->
-            <li><a class="dropdown-item" href="#">Laboratories</a></li>
-            <li><a class="dropdown-item" href="#">Sports</a></li>
-          </ul>
-        </li>
+          <!-- Academics -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
+              Academics
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Courses</a></li>
+              <li><a class="dropdown-item" href="#">Departments</a></li>
+              <li><a class="dropdown-item" href="#">Academic Calendar</a></li>
+              <li><a class="dropdown-item" href="#">Syllabus</a></li>
+            </ul>
+          </li>
 
-        <!-- Colleges -->
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
-            Colleges
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Engineering</a></li>
-            <li><a class="dropdown-item" href="#">Science</a></li>
-            <li><a class="dropdown-item" href="#">Arts</a></li>
-            <li><a class="dropdown-item" href="#">Commerece</a></li>
-            <li><a class="dropdown-item" href="#">Nursing</a></li>
-            <!-- added -->
-            <li><a class="dropdown-item" href="#">Law</a></li>
-            <li><a class="dropdown-item" href="#">Management</a></li>
-          </ul>
-        </li>
+          <!-- Admission -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
+              Admission
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">UG</a></li>
+              <li><a class="dropdown-item" href="#">PG</a></li>
+              <li><a class="dropdown-item" href="#">PhD</a></li>
+              <li><a class="dropdown-item" href="#">Admission Notice</a></li>
+            </ul>
+          </li>
 
-        <!-- Students -->
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
-            Students
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Student Login</a></li>
-            <li><a class="dropdown-item" href="#">LMS</a></li>
-            <li><a class="dropdown-item" href="#">Examination</a></li>
-            <li><a class="dropdown-item" href="#">Results</a></li>
-            <!-- added -->
-            <li><a class="dropdown-item" href="#">Scholarships</a></li>
-            <li><a class="dropdown-item" href="#">Notices</a></li>
-          </ul>
-        </li>
+          <!-- Facility -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
+              Facility
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Library</a></li>
+              <li><a class="dropdown-item" href="#">Hostel</a></li>
+              <li><a class="dropdown-item" href="#">Laboratories</a></li>
+              <li><a class="dropdown-item" href="#">Sports</a></li>
+            </ul>
+          </li>
 
-        <!-- Placements -->
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
-            Placements
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Placement Cell</a></li>
-            <li><a class="dropdown-item" href="#">Recruiters</a></li>
-            <li><a class="dropdown-item" href="#">Training & Internship</a></li>
-            <li><a class="dropdown-item" href="#">Placement Statistics</a></li>
-            <!-- added -->
-            <li><a class="dropdown-item" href="#">Career Guidance</a></li>
-          </ul>
-        </li>
+          <!-- Colleges -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
+              Colleges
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Engineering</a></li>
+              <li><a class="dropdown-item" href="#">Science</a></li>
+              <li><a class="dropdown-item" href="#">Arts</a></li>
+              <li><a class="dropdown-item" href="#">Commerece</a></li>
+              <li><a class="dropdown-item" href="#">Nursing</a></li>
+              <li><a class="dropdown-item" href="#">Law</a></li>
+              <li><a class="dropdown-item" href="#">Management</a></li>
+            </ul>
+          </li>
 
-        <li class="nav-item">
-          <a class="nav-link" href="#research">Research</a>
-        </li>
+          <!-- Students -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
+              Students
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Student Login</a></li>
+              <li><a class="dropdown-item" href="#">LMS</a></li>
+              <li><a class="dropdown-item" href="#">Examination</a></li>
+              <li><a class="dropdown-item" href="#">Results</a></li>
+              <li><a class="dropdown-item" href="#">Scholarships</a></li>
+              <li><a class="dropdown-item" href="#">Notices</a></li>
+            </ul>
+          </li>
 
-        <!-- added -->
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
-            Accreditation
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">IQAC</a></li>
-            <li><a class="dropdown-item" href="#">NAAC</a></li>
-            <li><a class="dropdown-item" href="#">NIRF</a></li>
-          </ul>
-        </li>
+          <!-- Placements -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
+              Placements
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Placement Cell</a></li>
+              <li><a class="dropdown-item" href="#">Recruiters</a></li>
+              <li><a class="dropdown-item" href="#">Training & Internship</a></li>
+              <li><a class="dropdown-item" href="#">Placement Statistics</a></li>
+              <li><a class="dropdown-item" href="#">Career Guidance</a></li>
+            </ul>
+          </li>
 
-        <li class="nav-item">
-          <a class="nav-link" href="#cell">Cell/Misc</a>
-        </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#research">Research</a>
+          </li>
 
-        <!-- added -->
-        <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact</a>
-        </li>
+          <!-- Accreditation -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
+              Accreditation
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">IQAC</a></li>
+              <li><a class="dropdown-item" href="#">NAAC</a></li>
+              <li><a class="dropdown-item" href="#">NIRF</a></li>
+            </ul>
+          </li>
 
-      </ul>
+          <li class="nav-item">
+            <a class="nav-link" href="#cell">Cell/Misc</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+
+        </ul>
+      </div>
     </div>
   </nav>
 </section>
+
 
     <section class="hero" id="home">
       <div id="heroCarousel" class="carousel slide">
