ADD placement section and updated the Life at campus section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       <!-- COLLAPSIBLE MENU -->
       <div class="collapse navbar-collapse" id="mainNavbar">
-        <ul class="navbar-nav mx-auto align-items-center">
+        <ul class="navbar-nav me-auto align-items-center">
 
           <li class="nav-item">
             <a class="nav-link" href="#">
@@ -110,35 +110,10 @@
               <li><a class="dropdown-item" href="#">Management</a></li>
             </ul>
           </li>
-
-          <!-- Students -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
-              Students
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Student Login</a></li>
-              <li><a class="dropdown-item" href="#">LMS</a></li>
-              <li><a class="dropdown-item" href="#">Examination</a></li>
-              <li><a class="dropdown-item" href="#">Results</a></li>
-              <li><a class="dropdown-item" href="#">Scholarships</a></li>
-              <li><a class="dropdown-item" href="#">Notices</a></li>
-            </ul>
+           <li class="nav-item">
+            <a class="nav-link" href="#placement">Placements</a>
           </li>
-
-          <!-- Placements -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
-              Placements
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Placement Cell</a></li>
-              <li><a class="dropdown-item" href="#">Recruiters</a></li>
-              <li><a class="dropdown-item" href="#">Training & Internship</a></li>
-              <li><a class="dropdown-item" href="#">Placement Statistics</a></li>
-              <li><a class="dropdown-item" href="#">Career Guidance</a></li>
-            </ul>
-          </li>
+          
 
           <li class="nav-item">
             <a class="nav-link" href="#research">Research</a>
@@ -161,7 +136,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
+            <a class="nav-link" href="#campus">Life at Campus</a>
           </li>
 
         </ul>
@@ -627,6 +602,77 @@
         </div>
       </div>
     </section>
+    <!--Placement-->
+    <section id="placement" class="py-5 bg-light">
+      <div class="container">
+        <div class="text-center mb-5">
+          <h2 class="section-title text-primary">
+            Trusted By Industry Leaders
+          </h2>
+          <div class="divider"></div>
+          <p class="text-muted">Partnering with leading companies worldwide</p>
+        </div>
+
+        <div class="row g-4">
+          <div class="col-6 col-md-3">
+            <div class="client-box">
+              <img src="./images/tata.png" alt="Tata Group Logo" />
+            </div>
+          </div>
+
+          <div class="col-6 col-md-3">
+            <div class="client-box">
+              <img src="./images/relianec.png" alt="Reliance Industries Logo" />
+            </div>
+          </div>
+
+          <div class="col-6 col-md-3">
+            <div class="client-box">
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Siemens-logo.svg/320px-Siemens-logo.svg.png"
+                alt="Siemens Logo"
+              />
+            </div>
+          </div>
+
+          <div class="col-6 col-md-3">
+            <div class="client-box">
+              <img src="./images/l&t.png" alt="Larsen & Toubro Logo" />
+            </div>
+          </div>
+
+          <div class="col-6 col-md-3">
+            <div class="client-box">
+              <img src="./images/adani.png" alt="Adani Group Logo" />
+            </div>
+          </div>
+
+          <div class="col-6 col-md-3">
+            <div class="client-box">
+              <img src="./images/mahindra.png" alt="Mahindra Group Logo" />
+            </div>
+          </div>
+
+          <div class="col-6 col-md-3">
+            <div class="client-box">
+              <img src="./images/godreg.png" alt="Godrej Group Logo" />
+            </div>
+          </div>
+
+          <div class="col-6 col-md-3">
+            <div class="client-box">
+              <img src="./images/bhel.png" alt="BHEL Logo" />
+            </div>
+          </div>
+        </div>
+
+        <div class="text-center mt-5">
+          <p class="lead text-muted">
+            Serving 500+ clients across 30+ countries
+          </p>
+        </div>
+      </div>
+    </section>
 
     <!-- Cell/Misc Section -->
     <section id="cell" class="section-padding">
@@ -732,28 +778,28 @@
 </div>
 <div class="col-md-3 col-sm-6">
   <div class="life-card">
-    <img src="images/campus.jpg" alt="Campus Life">
+    <img src="images/student.jpg" alt="Campus Life">
     <div class="life-overlay">
-      <h5>Campus Life</h5>
-      <p>A vibrant and inclusive campus environment.</p>
+      <h5>Student Commities</h5>
+      <p>The Academic Committee is the only formal entity which acts as a liaison between the students, faculty and the PGP...</p>
     </div>
   </div>
 </div>
 <div class="col-md-3 col-sm-6">
   <div class="life-card">
-    <img src="images/campus.jpg" alt="Campus Life">
+    <img src="images/pmc.jpg" alt="Campus Life">
     <div class="life-overlay">
-      <h5>Campus Life</h5>
-      <p>A vibrant and inclusive campus environment.</p>
+      <h5>Product Management Club</h5>
+      <p>AlphaBeta the Product Management club of GVIT aims to cultivate the Product enthusiasts of...</p>
     </div>
   </div>
 </div>
 <div class="col-md-3 col-sm-6">
   <div class="life-card">
-    <img src="images/campus.jpg" alt="Campus Life">
+    <img src="images/cultural.jpg" alt="Campus Life">
     <div class="life-overlay">
-      <h5>Campus Life</h5>
-      <p>A vibrant and inclusive campus environment.</p>
+      <h5>Cultural Activities</h5>
+      <p>At GVIT, there is an excellent opportunity for the students to practically implement their learning and...</p>
     </div>
   </div>
 </div>
