--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
       <div class="container">
         <div class="text-center mb-5">
           <h2 class="section-title text-primary">
-            Trusted By Industry Leaders
+            Our Placement Partners
           </h2>
           <div class="divider"></div>
           <p class="text-muted">Partnering with leading companies worldwide</p>
