--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
         <div class="row g-4">
           <div class="col-6 col-md-3">
             <div class="client-box">
-              <img src="./images/tata.png" alt="Tata Group Logo" />
+              <img src="./images/t.png" alt="Tata Group Logo" />
             </div>
           </div>
 
@@ -637,7 +637,7 @@
 
           <div class="col-6 col-md-3">
             <div class="client-box">
-              <img src="./images/l&t.png" alt="Larsen & Toubro Logo" />
+              <img src="./images/cog.png" alt="Larsen & Toubro Logo" />
             </div>
           </div>
 
@@ -661,7 +661,7 @@
 
           <div class="col-6 col-md-3">
             <div class="client-box">
-              <img src="./images/bhel.png" alt="BHEL Logo" />
+              <img src="./images/wipro.png" alt="BHEL Logo" />
             </div>
           </div>
         </div>
