--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
           <div class="col-lg-4">
             <div class="leadership-card">
               <div class="leader-img-wrapper">
-                <img src="" alt="Chancellor" class="leader-img" />
+                <img src="https://placehold.net/avatar.png" alt="Chancellor" class="leader-img" />
               </div>
               <div class="leader-content">
                 <h4 class="leader-name">Dr. Rajesh Kumar</h4>
@@ -462,7 +462,7 @@
           <div class="col-lg-4">
             <div class="leadership-card">
               <div class="leader-img-wrapper">
-                <img src="" alt="Vice Chancellor" class="leader-img" />
+                <img src="https://placehold.net/avatar.png" alt="Vice Chancellor" class="leader-img" />
               </div>
               <div class="leader-content">
                 <h4 class="leader-name">Prof. Anjali Sharma</h4>
@@ -480,7 +480,7 @@
           <div class="col-lg-4">
             <div class="leadership-card">
               <div class="leader-img-wrapper">
-                <img src="" alt="Registrar" class="leader-img" />
+                <img src="https://placehold.net/avatar.png" alt="Registrar" class="leader-img" />
               </div>
               <div class="leader-content">
                 <h4 class="leader-name">Dr. Suresh Patel</h4>
