--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="header-section">
       <div class="container-fluid p-0">
         <img
-          src="/college_website/images/header.png"
+          src="/college_website/images/header.jpg"
           alt="College Header"
           class="header-img"
         />
