--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#campus">Life at Campus</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#login">Login</a>
+          </li>
 
         </ul>
       </div>
