--- a/index.html
+++ b/index.html
@@ -16,138 +16,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="header-section">
-      <div class="container-fluid p-0">
-        <img
-          src="/college_website/images/header.jpg"
-          alt="College Header"
-          class="header-img"
-        />
-      </div>
-    </section>
-   <section class="bg-warning d-flex align-items-center">
-  <nav class="navbar navbar-expand-lg navbar-custom">
-    <div class="container-fluid">
-
-      <!-- TOGGLER -->
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#mainNavbar"
-        aria-controls="mainNavbar"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <!-- COLLAPSIBLE MENU -->
-      <div class="collapse navbar-collapse" id="mainNavbar">
-        <ul class="navbar-nav me-auto align-items-center">
-
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <i class="fas fa-house"></i>
-            </a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="#about">About us</a>
-          </li>
-
-          <!-- Academics -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
-              Academics
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Courses</a></li>
-              <li><a class="dropdown-item" href="#">Departments</a></li>
-              <li><a class="dropdown-item" href="#">Academic Calendar</a></li>
-              <li><a class="dropdown-item" href="#">Syllabus</a></li>
-            </ul>
-          </li>
-
-          <!-- Admission -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
-              Admission
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">UG</a></li>
-              <li><a class="dropdown-item" href="#">PG</a></li>
-              <li><a class="dropdown-item" href="#">PhD</a></li>
-              <li><a class="dropdown-item" href="#">Admission Notice</a></li>
-            </ul>
-          </li>
-
-          <!-- Facility -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
-              Facility
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Library</a></li>
-              <li><a class="dropdown-item" href="#">Hostel</a></li>
-              <li><a class="dropdown-item" href="#">Laboratories</a></li>
-              <li><a class="dropdown-item" href="#">Sports</a></li>
-            </ul>
-          </li>
-
-          <!-- Colleges -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
-              Colleges
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Engineering</a></li>
-              <li><a class="dropdown-item" href="#">Science</a></li>
-              <li><a class="dropdown-item" href="#">Arts</a></li>
-              <li><a class="dropdown-item" href="#">Commerece</a></li>
-              <li><a class="dropdown-item" href="#">Nursing</a></li>
-              <li><a class="dropdown-item" href="#">Law</a></li>
-              <li><a class="dropdown-item" href="#">Management</a></li>
-            </ul>
-          </li>
-           <li class="nav-item">
-            <a class="nav-link" href="#placement">Placements</a>
-          </li>
-          
-
-          <li class="nav-item">
-            <a class="nav-link" href="#research">Research</a>
-          </li>
-
-          <!-- Accreditation -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
-              Accreditation
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">IQAC</a></li>
-              <li><a class="dropdown-item" href="#">NAAC</a></li>
-              <li><a class="dropdown-item" href="#">NIRF</a></li>
-            </ul>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="#cell">Cell/Misc</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="#campus">Life at Campus</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#login">Login</a>
-          </li>
-
-        </ul>
-      </div>
-    </div>
-  </nav>
-</section>
-
+    <div id="navbar"></div>
 
     <section class="hero" id="home">
       <div id="heroCarousel" class="carousel slide">
@@ -447,7 +316,11 @@
           <div class="col-lg-4">
             <div class="leadership-card">
               <div class="leader-img-wrapper">
-                <img src="https://placehold.net/avatar.png" alt="Chancellor" class="leader-img" />
+                <img
+                  src="https://placehold.net/avatar.png"
+                  alt="Chancellor"
+                  class="leader-img"
+                />
               </div>
               <div class="leader-content">
                 <h4 class="leader-name">Dr. Rajesh Kumar</h4>
@@ -465,7 +338,11 @@
           <div class="col-lg-4">
             <div class="leadership-card">
               <div class="leader-img-wrapper">
-                <img src="https://placehold.net/avatar.png" alt="Vice Chancellor" class="leader-img" />
+                <img
+                  src="https://placehold.net/avatar.png"
+                  alt="Vice Chancellor"
+                  class="leader-img"
+                />
               </div>
               <div class="leader-content">
                 <h4 class="leader-name">Prof. Anjali Sharma</h4>
@@ -483,7 +360,11 @@
           <div class="col-lg-4">
             <div class="leadership-card">
               <div class="leader-img-wrapper">
-                <img src="https://placehold.net/avatar.png" alt="Registrar" class="leader-img" />
+                <img
+                  src="https://placehold.net/avatar.png"
+                  alt="Registrar"
+                  class="leader-img"
+                />
               </div>
               <div class="leader-content">
                 <h4 class="leader-name">Dr. Suresh Patel</h4>
@@ -609,9 +490,7 @@
     <section id="placement" class="py-5 bg-light">
       <div class="container">
         <div class="text-center mb-5">
-          <h2 class="section-title text-primary">
-            Our Placement Partners
-          </h2>
+          <h2 class="section-title text-primary">Our Placement Partners</h2>
           <div class="divider"></div>
           <p class="text-muted">Partnering with leading companies worldwide</p>
         </div>
@@ -765,209 +644,61 @@
 
     <!--Campus section-->
     <section class="container-fluid py-5 text-center" id="campus">
-  <h2 class="section-title mb-4 mb-5">Life at University</h2>
+      <h2 class="section-title mb-4 mb-5">Life at University</h2>
 
-  <div class="container">
-    <div class="row g-4">
-      
-      <div class="col-md-3 col-sm-6">
-  <div class="life-card">
-    <img src="images/campus.jpg" alt="Campus Life">
-    <div class="life-overlay">
-      <h5>Campus Life</h5>
-      <p>A vibrant and inclusive campus environment.</p>
-    </div>
-  </div>
-</div>
-<div class="col-md-3 col-sm-6">
-  <div class="life-card">
-    <img src="images/student.jpg" alt="Campus Life">
-    <div class="life-overlay">
-      <h5>Student Commities</h5>
-      <p>The Academic Committee is the only formal entity which acts as a liaison between the students, faculty and the PGP...</p>
-    </div>
-  </div>
-</div>
-<div class="col-md-3 col-sm-6">
-  <div class="life-card">
-    <img src="images/pmc.jpg" alt="Campus Life">
-    <div class="life-overlay">
-      <h5>Product Management Club</h5>
-      <p>AlphaBeta the Product Management club of GVIT aims to cultivate the Product enthusiasts of...</p>
-    </div>
-  </div>
-</div>
-<div class="col-md-3 col-sm-6">
-  <div class="life-card">
-    <img src="images/cultural.jpg" alt="Campus Life">
-    <div class="life-overlay">
-      <h5>Cultural Activities</h5>
-      <p>At GVIT, there is an excellent opportunity for the students to practically implement their learning and...</p>
-    </div>
-  </div>
-</div>
-
-    </div>
-  </div>
-</section>
-
-    </section>
-    <!--Footer Section-->
-    <footer class="footer-section">
       <div class="container">
-        <!-- University Info -->
-        <div class="footer-logo-section">
-          <img src="images/gvit.png" alt="GVIT Logo" class="footer-logo" />
-          <h3 class="footer-university-name">GVIT</h3>
-          <p class="footer-address">
-            GVIT, Jyoti Vihar, Burla,<br />
-            Sambalpur, Odisha- 768019
-          </p>
-          <div>
-            <a href="mailto:registrar@gvit.ac.in" class="footer-email-btn"
-              >registrar@gvit.ac.in</a
-            >
-            <a href="mailto:vc@gvit.ac.in" class="footer-email-btn"
-              >vc@gvit.ac.in</a
-            >
+        <div class="row g-4">
+          <div class="col-md-3 col-sm-6">
+            <div class="life-card">
+              <img src="images/campus.jpg" alt="Campus Life" />
+              <div class="life-overlay">
+                <h5>Campus Life</h5>
+                <p>A vibrant and inclusive campus environment.</p>
+              </div>
+            </div>
           </div>
-          <div class="footer-social-icons">
-            <a href="#" class="social-icon"
-              ><i class="fab fa-facebook-f"></i
-            ></a>
-            <a href="#" class="social-icon"><i class="fab fa-youtube"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+          <div class="col-md-3 col-sm-6">
+            <div class="life-card">
+              <img src="images/student.jpg" alt="Campus Life" />
+              <div class="life-overlay">
+                <h5>Student Commities</h5>
+                <p>
+                  The Academic Committee is the only formal entity which acts as
+                  a liaison between the students, faculty and the PGP...
+                </p>
+              </div>
+            </div>
           </div>
-        </div>
-
-        <!-- Links Section -->
-        <div class="row mt-5">
-          <div class="col-lg-4 col-md-6 mb-4">
-            <h4 class="footer-heading">
-              <i class="fas fa-link"></i> Quick Links
-            </h4>
-            <ul class="footer-links">
-              <li>
-                <a href="#"><i class="fas fa-chevron-right"></i> Govt. Links</a>
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fas fa-chevron-right"></i> Career Counseling and
-                  Placement Cell</a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fas fa-chevron-right"></i> Wifi Registration</a
-                >
-              </li>
-              <li>
-                <a href="#"><i class="fas fa-chevron-right"></i> RTI</a>
-              </li>
-              <li>
-                <a href="#"><i class="fas fa-chevron-right"></i> CIF</a>
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fas fa-chevron-right"></i> Press Note - ORC 2023</a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fas fa-chevron-right"></i> Current Events</a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fas fa-chevron-right"></i> Video Gallery</a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fas fa-chevron-right"></i> Faculty Login</a
-                >
-              </li>
-            </ul>
+          <div class="col-md-3 col-sm-6">
+            <div class="life-card">
+              <img src="images/pmc.jpg" alt="Campus Life" />
+              <div class="life-overlay">
+                <h5>Product Management Club</h5>
+                <p>
+                  AlphaBeta the Product Management club of GVIT aims to
+                  cultivate the Product enthusiasts of...
+                </p>
+              </div>
+            </div>
           </div>
-
-          <div class="col-lg-4 col-md-6 mb-4">
-            <h4 class="footer-heading">
-              <i class="fas fa-list"></i> Social Updates
-            </h4>
-            <ul class="footer-links">
-              <li>
-                <a href="#"
-                  ><i class="fas fa-chevron-right"></i> Advertisement & Forms</a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fas fa-chevron-right"></i> Foreign Students
-                  Admission Cell</a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fas fa-chevron-right"></i> Nearby Places to
-                  Visit</a
-                >
-              </li>
-              <li>
-                <a href="#"><i class="fas fa-chevron-right"></i> Index Page</a>
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fas fa-chevron-right"></i> Download e-Office
-                  excels</a
-                >
-              </li>
-              <li>
-                <a href="#"><i class="fas fa-chevron-right"></i> Grievance</a>
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fas fa-chevron-right"></i> Photo Gallery</a
-                >
-              </li>
-              <li>
-                <a href="#"><i class="fas fa-chevron-right"></i> Feedback</a>
-              </li>
-              <li>
-                <a href="#"><i class="fas fa-chevron-right"></i> Contacts</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="col-lg-4 col-md-12 mb-4">
-            <h4 class="footer-heading">
-              <i class="fab fa-linkedin"></i> Social Updates
-            </h4>
-            <div class="linkedin-widget">
-              <iframe
-                src="https://www.linkedin.com/company/gvitechnoloy/"
-                width="100%"
-                height="400"
-                style="border: none; overflow: hidden"
-                scrolling="no"
-                frameborder="0"
-                allowfullscreen="true"
-                allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-              >
-              </iframe>
+          <div class="col-md-3 col-sm-6">
+            <div class="life-card">
+              <img src="images/cultural.jpg" alt="Campus Life" />
+              <div class="life-overlay">
+                <h5>Cultural Activities</h5>
+                <p>
+                  At GVIT, there is an excellent opportunity for the students to
+                  practically implement their learning and...
+                </p>
+              </div>
             </div>
           </div>
         </div>
       </div>
+    </section>
 
-      <!-- Footer Bottom -->
-      <div class="footer-bottom">
-        <div class="container">
-          <p>Copyright © 2026 GVIT, All Rights Reserved.</p>
-          <p>Powered by <a href="#">GVIT Technologies</a></p>
-        </div>
-      </div>
-    </footer>
+    <!--Footer Section-->
+    <div id="footer"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
